--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-link active" href="./movies.html" id="a1" style="color: white;">Movies <span class="sr-only">(current)</span></a>
-                    <a class="nav-link active" href="./tvshows.html" id="a2" style="color: white;">TV Shows</a>
+                    <a class="nav-link active" href="./tvshows.html" id="a2" style="color: white;">Series & Shows</a>
                     <!-- <a class="nav-link active" href="#" id="a3">Discover</a> -->
                 </div>
             </div>
@@ -39,7 +39,7 @@
       <div class="container" id="con1">
           <div class="row">
               <h2 class="col-12 col-lg-12 col-md-12 col-sm-12 lead display-2">Welcome</h2>
-              <h3 class="col-12 col-lg-12 col-md-12 col-sm-12 lead display-6">Millions of movies, TV shows and people to discover. Explore now.</h3>
+              <h3 class="col-12 col-lg-12 col-md-12 col-sm-12 lead display-6">Millions of Movies, Series/Shows and people to discover. Explore now.</h3>
           </div>
           <div class="row">
               <form action="">
