--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #343a40;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html" style="color: white;"><i class="fas fas-lg fa-portrait"></i>&nbsp IMDb Clone</a>
+            <a class="navbar-brand" href="./index.html" style="color: white;"><img src="logo.png"></i>&nbsp HOMoviE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
