--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #343a40;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="color: white;"><img src="logo.png"></i>&nbsp HOMoviE</a>
+            <a class="navbar-brand" href="#" style="color: white;"><img src="logo.png"></i>&nbsp MovieHome</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,9 +42,9 @@
               <h3 class="col-12 col-lg-12 col-md-12 col-sm-12 lead display-6">Millions of Movies, Series/Shows and people to discover. Explore now.</h3>
           </div>
           <div class="row">
-              <form action="">
+              <form action="/searchResult.html">
                   <input type="text" placeholder="Search......" class="col-10 col-lg-8 col-md-7 col-sm-7">
-                  <button type="submit" disabled="true" class="btn-primary col-4 col-lg-2 col-md-3 col-sm-3">Search</button>
+                  <button type="submit" class="btn-primary col-4 col-lg-2 col-md-3 col-sm-3">Search</button>
               </form>
           </div>
       </div>
@@ -53,15 +53,7 @@
 
       <div class="container">
           <div class="row">
-              <h3 class="col-12 col-lg-12 lead display-6">What's Popular<span>View All</span></h3>
-              <!-- <div class="col-8 col-lg-5">
-                  <ul>
-                      <li><a href="#">Stream</a></li>
-                      <li><a href="#">On TV</a></li>
-                      <li><a href="#">Rent</a></li>
-                      <li><a href="#">In Theatres</a></li>
-                  </ul>
-              </div> -->
+              <h3 class="col-12 col-lg-12 lead display-6">What's Popular</h3>
               <ul class="col-12 col-lg-12" id="popular">
                   
               </ul>
@@ -71,38 +63,12 @@
 
       <div class="container">
         <div class="row">
-            <h3 class="col-12 col-lg-12 lead display-6">Trending<span>View All</span></h3>
-            <!-- <div class="col-8 col-lg-5">
-                <ul>
-                    <li><a href="#">Stream</a></li>
-                    <li><a href="#">On TV</a></li>
-                    <li><a href="#">Rent</a></li>
-                    <li><a href="#">In Theatres</a></li>
-                </ul>
-            </div> -->
+            <h3 class="col-12 col-lg-12 lead display-6">Trending</h3>
             <ul class="col-12 col-lg-12" id="trending">
                 
             </ul>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
