--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assert/css/style.css">
-    <title>Document</title>
+    <title>MovieHome</title>
 </head>
 <body>
 
