--- a/searchResult.html
+++ b/searchResult.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assert/css/style.css">
     <title>MovieHome</title>
+    <link rel="icon" href="/logo.png">
 </head>
 <body>
 
