--- a/movies.html
+++ b/movies.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assert/css/style.css">
     <title>Movies</title>
+    <link rel="icon" href="/logo.png">
 </head>
 <body>
 
