--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" href="./movies.html" id="a1" style="color: white;">Movies <span class="sr-only">(current)</span></a>
                     <a class="nav-link active" href="./tvshows.html" id="a2" style="color: white;">Series & Shows</a>
+                    <a class="nav-link active" href="./tod.html" id="a2" style="color: white;">WatchList</a>
                     <!-- <a class="nav-link active" href="#" id="a3">Discover</a> -->
                 </div>
             </div>
