--- a/tod.html
+++ b/tod.html
@@ -14,6 +14,8 @@
 
   <script defer src="assert/js/tod.js"></script>
   <link rel="stylesheet" href="assert/css/tod.css">
+  <title>WatchList</title>
+    <link rel="icon" href="/logo.png">
 
 </head>
 <body>
